add back home btn in all pages

--- a/src/main/resources/templates/all-bookings.html
+++ b/src/main/resources/templates/all-bookings.html
@@ -161,11 +161,13 @@
                      th:name="${_csrf.parameterName}"
                      th:value="${_csrf.token}" />
               <button type="submit" onclick="return confirm('Are you sure you want to cancel this booking?')">Cancel</button>
+              
             </form>
           </td>
         </tr>
       </tbody>
     </table>
+    <a class="link" href="/home">← Back to Home</a>
   </div>
 
 </body>
