--- a/src/main/resources/templates/other-services.html
+++ b/src/main/resources/templates/other-services.html
@@ -167,6 +167,7 @@
 
         <button type="submit" class="submit-button">Add Selected Services</button>
     </form>
+    <a class="link" href="/home">← Back to Home</a>
 </div>
 </body>
 </html>
