--- a/src/main/resources/templates/my-orders.html
+++ b/src/main/resources/templates/my-orders.html
@@ -175,7 +175,17 @@
             </tr>
         </tbody>
     </table>
-    <a class="link" href="/home">← Back to Home</a>
+    <a href="/home" style="
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #9922c8; 
+  color: white;
+  text-decoration: none;
+  border-radius: 8px;
+  font-weight: 500;
+  transition: background-color 0.3s ease;">
+  ← Back to Home
+</a>
 </div>
 
 </body>
