--- a/src/main/resources/templates/other-services.html
+++ b/src/main/resources/templates/other-services.html
@@ -170,7 +170,7 @@
     <a href="/home" style="
   display: inline-block;
   padding: 10px 20px;
-  background-color: #007bff; 
+  background-color: #9922c8; 
   color: white;
   text-decoration: none;
   border-radius: 8px;
